# ChangeLog for NetApp Cacti scripts
# Copyright 2008-2008 Chris Gianelloni; Distributed under the GPL v2
# $Header: $

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Change some arrays and variables to be unique.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  +cacti/netapp/script_server/netapp-volumes.xml:
  Adding script_server/netapp-volumes.xml for use with ss_netapp.php and the
  new ss_netapp_volumes function.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Renaming some of the oids array keys.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Call our volume function along side the lun function when called without a
  function argument.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Added ss_netapp_volumes, based on ss_netapp_luns and the old NetApp volume
  checks which used SNMP directly.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding in SNMP splitting to each function that needs it.

  14 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Fixing the SNMP splitting temporarily.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding notes about which licenses are required for a given function for
  the LUN and FCP functions.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Adding a comment to remind me to make the script run everything when
  called without a function name.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php:
  Cleaning up some comments so they're correct.

  09 Sep 2008; Chris Gianelloni <wolf31o2@wolf31o2.org>
  cacti/netapp/scripts/ss_netapp.php: